# sage

./: .gitignore  .gitlab-ci.yml  GNUmakefile.am  Makefile  TODO  configure.ac  deps.in  index.json  regressions.json  regressions.xml
.ci/: build-binder.sh  build-docker.sh  check-dev.sh  pull-dockerhub.sh  pull-gitlab.sh  push-dockerhub.sh  push-gitlab.sh  setup-make-parallelity.sh  test-doctest.sh  test-pdf.sh  update-env.sh
.ci/binder/: README.md  (+1 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile  README.md
m4/: sage_foreign.m4
src/: Makefile.am  README  configure.ac  module_list.py  setup.py
src/doc/: Makefile.am  configure.ac
src/doc/common/: build_options.py.in  builder.py
src/doc/en/reference/references/: index.rst
src/doc/en/thematic_tutorials/: coercion_and_categories.rst
src/ext/: Makefile.am
src/sage/algebras/quatalg/: quaternion_algebra_element.pyx
src/sage/categories/: commutative_additive_monoids.py  fields.py  integral_domains.py  monoids.py  pushout.py  rings.py
src/sage/graphs/: matchpoly.pyx
src/sage/libs/linkages/padics/: fmpz_poly_unram.pxi  mpz.pxi
src/sage/matrix/: matrix0.pyx  matrix2.pyx  matrix_local_generic_dense.py  matrix_space.py
src/sage/misc/: cachefunc.pyx
src/sage/rings/: integer.pyx  rational.pyx  ring.pyx
src/sage/rings/finite_rings/: constructor.py  element_ext_pari.py  element_ntl_gf2e.pxd  element_ntl_gf2e.pyx  finite_field_base.pyx  finite_field_ext_pari.py  finite_field_givaro.py
src/sage/rings/function_field/: function_field.py  function_field_element.pyx  maps.py
src/sage/rings/number_field/: number_field_ideal.py
src/sage/rings/padics/: CA_template.pxi  CR_template.pxi  FM_template.pxi  README.txt  all.py  augmented_valuation.py  common_conversion.pyx  developing_valuation.py  discrete_pseudo_valuation.py  eisenstein_extension_generic.py  factory.py  function_field_valuation.py  gauss_valuation.py  general_extension_generic.py  generic_nodes.py  lattice_precision.py  local_generic.py  local_generic_element.pyx  newton_polygon.py  padic_ZZ_pX_CA_element.pyx  padic_ZZ_pX_CR_element.pyx  padic_ZZ_pX_FM_element.pyx  padic_ZZ_pX_element.pyx  padic_base_generic.py  padic_base_generic_element.pyx  padic_base_leaves.py  padic_capped_absolute_element.pyx  padic_capped_relative_element.pyx  padic_ext_element.pyx  padic_extension_generic.py  padic_extension_leaves.py  padic_fixed_mod_element.pyx  padic_general_element.pyx  padic_generic.py  padic_generic_element.pyx  padic_lattice_element.py  padic_laurent_CA_element.pyx  padic_laurent_CR_element.pyx  padic_laurent_FM_element.pyx  padic_laurent_element.pyx  (+12 more)
src/sage/rings/polynomial/: multi_polynomial.pyx  multi_polynomial_element.py  polynomial_element.pyx  polynomial_element_generic.py  polynomial_integer_dense_flint.pyx  polynomial_modn_dense_ntl.pyx  polynomial_quotient_ring.py  polynomial_quotient_ring_element.py  polynomial_rational_flint.pyx
src/sage/rings/polynomial/padics/: polynomial_padic_capped_relative_dense.py  polynomial_padic_flat.py
src/sage/rings/polynomial/padics/factor/: factoring.py  frame.py  frameelt.py  segment.py
src/sage/schemes/elliptic_curves/: descent_two_isogeny.pyx
src/sage/schemes/projective/: projective_space.py
src/sage/sets/: set.py
src/sage/structure/: element.pxd  element.pyx  factory.pyx
src/sage_setup/docbuild/: __init__.py
(+489 files in other folders)
